Use asConst for several stringlists.

BUG:437921